--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Платформа Опросов - Вход</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="image" href="favicon.ico">
 </head>
 <body>
     <header>
