--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 Платформа Опросов</p>
+        <p>&copy; copyright lololololololo</p>
     </footer>
 
     <script src="scripts/utils.js"></script>
