--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,15 @@
                 <input type="password" id="reg-password" name="password" required>
                 <button type="submit">Зарегистрироваться</button>
             </form>
+            
+            <div id="take-survey-container">
+                <h2>Пройти Опрос по ID</h2>
+                <form id="take-survey-form">
+                    <label for="survey-id">ID Опроса:</label>
+                    <input type="text" id="survey-id" name="survey_id" required>
+                    <button type="submit">Пройти Опрос</button>
+                </form>
+            </div>
         </div>
 
         <div id="protected-content" style="display:none;">
