--- a/frontend/take_survey.html
+++ b/frontend/take_survey.html
@@ -11,16 +11,12 @@
         <h1>Прохождение Опроса</h1>
         <nav>
             <a href="index.html">Главная</a>
-            <button id="logout-button" style="display: none;">Выйти</button>
+            <button id="logout-button">Выйти</button>
         </nav>
     </header>
     <main>
         <div id="survey-container">
-            <h2 id="survey-title">Загрузка...</h2>
-            <form id="survey-form">
-                <!-- Вопросы будут добавлены динамически -->
-                <button type="submit">Отправить Ответы</button>
-            </form>
+            <!-- Опрос будет загружен динамически -->
         </div>
     </main>
     <footer>
